--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       Quick, tasty, and affordable — Food Dale brings the deal to your meal.
     </p>
     
-    <div class="input-container">
+    <div class="input-container py-2">
       <div class="location-input-container">
         <span class="material-icons location-icon">location_on</span>
         <input type="search" placeholder="Enter Your Delivery Location" class="search-input"/>
