--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <h4 class="mt-3">Keep in Touch</h4>
               <div class="social-icons">
                 <a href="https://www.instagram.com/fooddaleonline/" target="_blank"><i class="fab fa-instagram footer-icon"></i></a>
-                <a href="#"><i class="fab fa-twitter footer-icon" aria-hidden="true"></i></a>
+                <a href="https://x.com/foodella_" target="_blank"><i class="fab fa-twitter footer-icon" aria-hidden="true"></i></a>
                 <a href="https://fr-fr.facebook.com/permalink.php?story_fbid=320824524670646&id=280197505405584" target="_blank"> <i class="fab fa-facebook footer-icon"></i></a>
                 <a href="https://www.linkedin.com/in/food-dale-inc-a07b81353/" target="_blank"><i class="fab fa-linkedin-in footer-icon"></i></a>
                 
